# ssr

./: .gitignore  .travis.yml  AUTHORS.md  ByteQueue.cpp  ByteQueue.h  CHANGELOG.md  CMakeLists.txt  Logger.cpp  Logger.h  Main.cpp  Main.h  Makefile.am  Makefile.in  README.md  SimpleScreenRecorder.desktop  SimpleScreenRecorder.pro  StdAfx.h  TODO.md  VPair.h  Version.h  about.htm  aclocal.m4  bootstrap  compile  config.h.in  configure  configure.ac  ffmpeg8-compatibility.patch  ffmpeg8-fixes.patch  files_to_install  main-encoder-test.cpp  main.cpp  mqtt-config-example.yaml  notes.txt  postinstall  prebuild  resources.qrc  simple-build-and-install  simple-uninstall  simplescreenrecorder.spec  (+1 more)
AV/: AVWrapper.cpp  (+7 more)
data/: Makefile.am  Makefile.in  about.htm  be.maartenbaert.simplescreenrecorder.desktop  be.maartenbaert.simplescreenrecorder.metainfo.xml  simplescreenrecorder.appdata.xml  simplescreenrecorder.desktop  simplescreenrecorder.metainfo.xml
data/man/: simplescreenrecorder.1  simplescreenrecorder.man  ssr-glinject.1  ssr-glinject.man
data/output-profiles/: High%20Quality%20Intermediate.conf  Live%20Stream%20%281000kbps%29.conf  Live%20Stream%20%282000kbps%29.conf  Live%20Stream%20%283000kbps%29.conf  YouTube.conf
data/resources/: about.htm  resources.qrc
glinject/: CMakeLists.txt  GLFrameGrabber.cpp  GLFrameGrabber.h  GLInject.cpp  GLInject.h  GLInject.pro  GLXFrameGrabber.cpp  GLXFrameGrabber.h  Global.h  Hook.cpp  Makefile.am  Makefile.in  SSRVideoStreamWriter.cpp  SSRVideoStreamWriter.h  ShmStructs.h  StdAfx.h  compile32  compile64  elfhacks.c  elfhacks.h  plthook.h  plthook_elf.c
src/: Benchmark.cpp  Benchmark.h  ByteQueue.h  CMakeLists.txt  Global.h  Logger.cpp  Logger.h  Main.cpp  Main.h  Makefile.am  Makefile.in  MqttClient.cpp  MqttClient.h  MqttClientInterface.h  MqttClientSimple.cpp  MqttClientSimple.h  MqttConfig.cpp  MqttConfig.h  NVidia.cpp  NVidia.h  SimpleScreenRecorder.pro  Utils.cpp  Utils.h  VPair.h  Version.cpp  Version.h  resources.qrc  ssr-rc-client.cpp  ssr-rc-client.h  ssr-rc-main.cpp  ssr-rc-window.cpp  ssr-rc-window.h  update-project.py  update-translations  update-translations-clean
src/AV/: AVWrapper.cpp  AVWrapper.h  DetectCPUFeatures.cpp  FastResampler.cpp  FastResampler.h  FastResampler_FirFilter.h  FastResampler_FirFilter_Fallback.cpp  FastResampler_FirFilter_LSX.cpp  FastResampler_FirFilter_SSE2.cpp  FastScaler.cpp  FastScaler.h  FastScaler_Convert.cpp  FastScaler_Convert.h  FastScaler_Convert_Fallback.cpp  FastScaler_Convert_LSX.cpp  FastScaler_Convert_SSSE3.cpp  FastScaler_Scale.cpp  FastScaler_Scale.h  FastScaler_Scale_Fallback.cpp  FastScaler_Scale_Generic.cpp  FastScaler_Scale_Generic.h  FastScaler_Scale_LSX.cpp  FastScaler_Scale_SSSE3.cpp  Muxer.cpp  Muxer.h  Resampler.cpp  Resampler.h  SampleCast.h  SimpleSynth.cpp  SimpleSynth.h  SourceSink.cpp  SourceSink.h  Synchronizer.cpp  Synchronizer.h  YUVConverter.cpp  YUVConverter.h
src/GUI/: AudioPreviewer.cpp  AudioPreviewer.h  DialogGLInject.cpp  DialogGLInject.h  DialogMqttSettings.cpp  DialogMqttSettings.h  DialogRecordSchedule.cpp  DialogRecordSchedule.h  ElidedLabel.cpp  ElidedLabel.h  HiddenScrollArea.cpp  HiddenScrollArea.h  HotkeyListener.cpp  HotkeyListener.h  Icons.cpp  Icons.h  KeyboardKeys.cpp  MainWindow.cpp  MainWindow.h  PageDone.cpp  PageDone.h  PageInput.cpp  PageInput.h  PageOutput.cpp  PageOutput.h  PageRecord.cpp  PageRecord.h  PageRecordAdaptor.cpp  PageRecordAdaptor.h  PageWelcome.cpp  PageWelcome.h  ProfileBox.cpp  ProfileBox.h  VideoPreviewer.cpp  VideoPreviewer.h  WidgetRack.cpp  WidgetRack.h  be.maartenbaert.xml  ssr_panel.cpp  ssr_panel.h
src/common/: ByteQueue.cpp  CPUFeatures.cpp  CPUFeatures.h  CommandLineOptions.cpp  CommandLineOptions.h  CommandSettings.cpp  CommandSettings.h  DetectCPUFeatures.cpp  DetectCPUFeatures.h  Dialogs.cpp  Dialogs.h  EnumStrings.h  EnumTranslator.h  LockFreeMessageQueue.h  Logger.cpp  Logger.h  MutexDataPair.h  QueueBuffer.h  ScreenScaling.cpp  ScreenScaling.h  SimpleJSON.cpp  SimpleJSON.h  TempBuffer.h  Terminator.cpp  Terminator.h
src/libelfhacks/: Makefile.am  Makefile.in  elfhacks.h
src/libssr-glinject/: GLInject.cpp  GLInject.h  GLInjectGlobal.h  GLXFrameGrabber.cpp  GLXFrameGrabber.h  Hook.cpp  Makefile.am  Makefile.in  SSRVideoStreamWriter.cpp  SSRVideoStreamWriter.h  ShmStructs.h
src/libssr-stream/: ClientConnection.cpp  ClientConnection.h  Common.cpp  Common.h  FileDescriptor.cpp  FileDescriptor.h  Makefile.am  Makefile.in  MessageHelpers.h  Protocol.h  QueueBuffer.h  Server.cpp  Server.h  ServerConnection.cpp  ServerConnection.h  VideoFrame.cpp  VideoFrame.h
src/settings/: InputSettings.cpp  InputSettings.h  OutputSettings.cpp  OutputSettings.h  RecordSettings.cpp  RecordSettings.h
src/simplescreenrecorder/: Benchmark.cpp  Benchmark.h  Global.h  Main.cpp  Main.h  Makefile.am  Makefile.in  NVidia.cpp  NVidia.h
src/translations/: CMakeLists.txt  list.txt  simplescreenrecorder-zh_CN.ts  simplescreenrecorder_ar.ts  simplescreenrecorder_bg.ts  simplescreenrecorder_cs.ts  simplescreenrecorder_de.ts  simplescreenrecorder_el.ts  simplescreenrecorder_eo.ts  simplescreenrecorder_es.ts  simplescreenrecorder_fr.ts  simplescreenrecorder_gl.ts  simplescreenrecorder_he.ts  simplescreenrecorder_hu.ts  simplescreenrecorder_id.ts  simplescreenrecorder_it.ts  simplescreenrecorder_ja.ts  simplescreenrecorder_ko.ts  simplescreenrecorder_lt.ts  simplescreenrecorder_nl.ts  simplescreenrecorder_pl.ts  simplescreenrecorder_pt_BR.ts  simplescreenrecorder_ru.ts  simplescreenrecorder_sk.ts  simplescreenrecorder_sq.ts  simplescreenrecorder_sr.ts  simplescreenrecorder_sv.ts  simplescreenrecorder_tr.ts  simplescreenrecorder_uk.ts  simplescreenrecorder_uz.ts  (+3 more)
translations/: Makefile.am  Makefile.in  list.txt  simplescreenrecorder_bg.ts  simplescreenrecorder_cs.ts  simplescreenrecorder_de.ts  simplescreenrecorder_es.ts  simplescreenrecorder_he.ts  simplescreenrecorder_hu.ts  simplescreenrecorder_nl.ts  simplescreenrecorder_pl.ts  simplescreenrecorder_ru.ts  simplescreenrecorder_sv.ts  simplescreenrecorder_uk.ts  update-translations
(+229 files in other folders)
