if ENABLE_SSRPROGRAM

desktopdir = $(datadir)/applications
icon16dir = $(datadir)/icons/hicolor/16x16/apps
icon22dir = $(datadir)/icons/hicolor/22x22/apps
icon24dir = $(datadir)/icons/hicolor/24x24/apps
icon32dir = $(datadir)/icons/hicolor/32x32/apps
icon48dir = $(datadir)/icons/hicolor/48x48/apps
icon64dir = $(datadir)/icons/hicolor/64x64/apps
icon96dir = $(datadir)/icons/hicolor/96x96/apps
iconscalabledir = $(datadir)/icons/hicolor/scalable/apps

dist_desktop_DATA = \
	simplescreenrecorder.desktop

dist_icon16_DATA = \
	icons/16/simplescreenrecorder.png \
	icons/16/simplescreenrecorder-paused.png \
	icons/16/simplescreenrecorder-recording.png
dist_icon22_DATA = \
	icons/22/simplescreenrecorder.png \
	icons/22/simplescreenrecorder-paused.png \
	icons/22/simplescreenrecorder-recording.png
dist_icon24_DATA = \
	icons/24/simplescreenrecorder.png \
	icons/24/simplescreenrecorder-paused.png \
	icons/24/simplescreenrecorder-recording.png
dist_icon32_DATA = \
	icons/32/simplescreenrecorder.png \
	icons/32/simplescreenrecorder-paused.png \
	icons/32/simplescreenrecorder-recording.png
dist_icon48_DATA = \
	icons/48/simplescreenrecorder.png \
	icons/48/simplescreenrecorder-paused.png \
	icons/48/simplescreenrecorder-recording.png
dist_icon64_DATA = \
	icons/64/simplescreenrecorder.png \
	icons/64/simplescreenrecorder-paused.png \
	icons/64/simplescreenrecorder-recording.png
dist_icon96_DATA = \
	icons/96/simplescreenrecorder.png \
	icons/96/simplescreenrecorder-paused.png \
	icons/96/simplescreenrecorder-recording.png
dist_iconscalable_DATA = \
	icons/scalable/simplescreenrecorder.svg \
	icons/scalable/simplescreenrecorder-paused.svg \
	icons/scalable/simplescreenrecorder-recording.svg

########## Qt resource system ##########

EXTRA_DIST = \
	resources/resources.qrc \
	resources/about.htm \
	resources/header.png

endif
