if ENABLE_SSRPROGRAM

########## Icons ##########

desktopdir = $(datadir)/applications
icon16dir = $(datadir)/icons/hicolor/16x16/apps
icon22dir = $(datadir)/icons/hicolor/22x22/apps
icon24dir = $(datadir)/icons/hicolor/24x24/apps
icon32dir = $(datadir)/icons/hicolor/32x32/apps
icon48dir = $(datadir)/icons/hicolor/48x48/apps
icon64dir = $(datadir)/icons/hicolor/64x64/apps
icon96dir = $(datadir)/icons/hicolor/96x96/apps
icon128dir = $(datadir)/icons/hicolor/128x128/apps
icon192dir = $(datadir)/icons/hicolor/192x192/apps
icon256dir = $(datadir)/icons/hicolor/256x256/apps
iconscalabledir = $(datadir)/icons/hicolor/scalable/apps

dist_desktop_DATA = \
	simplescreenrecorder.desktop

dist_icon16_DATA = \
	icons/16/simplescreenrecorder.png \
	icons/16/simplescreenrecorder-paused.png \
	icons/16/simplescreenrecorder-recording.png
dist_icon22_DATA = \
	icons/22/simplescreenrecorder.png \
	icons/22/simplescreenrecorder-paused.png \
	icons/22/simplescreenrecorder-recording.png
dist_icon24_DATA = \
	icons/24/simplescreenrecorder.png \
	icons/24/simplescreenrecorder-paused.png \
	icons/24/simplescreenrecorder-recording.png
dist_icon32_DATA = \
	icons/32/simplescreenrecorder.png \
	icons/32/simplescreenrecorder-paused.png \
	icons/32/simplescreenrecorder-recording.png
dist_icon48_DATA = \
	icons/48/simplescreenrecorder.png \
	icons/48/simplescreenrecorder-paused.png \
	icons/48/simplescreenrecorder-recording.png
dist_icon64_DATA = \
	icons/64/simplescreenrecorder.png \
	icons/64/simplescreenrecorder-paused.png \
	icons/64/simplescreenrecorder-recording.png
dist_icon96_DATA = \
	icons/96/simplescreenrecorder.png \
	icons/96/simplescreenrecorder-paused.png \
	icons/96/simplescreenrecorder-recording.png
dist_icon128_DATA = \
	icons/128/simplescreenrecorder.png \
	icons/128/simplescreenrecorder-paused.png \
	icons/128/simplescreenrecorder-recording.png
dist_icon192_DATA = \
	icons/192/simplescreenrecorder.png \
	icons/192/simplescreenrecorder-paused.png \
	icons/192/simplescreenrecorder-recording.png
dist_icon256_DATA = \
	icons/256/simplescreenrecorder.png \
	icons/256/simplescreenrecorder-paused.png \
	icons/256/simplescreenrecorder-recording.png
dist_iconscalable_DATA = \
	icons/scalable/simplescreenrecorder.svg \
	icons/scalable/simplescreenrecorder-paused.svg \
	icons/scalable/simplescreenrecorder-recording.svg

########## Man pages ##########

man1_MANS = \
	man/simplescreenrecorder.man \
	man/ssr-glinject.man

########## Output profiles ##########

outputprofilesdir = $(pkgdatadir)/output-profiles
dist_outputprofiles_DATA = \
	output-profiles/High%20Quality%20Intermediate.conf \
	output-profiles/Live%20Stream%20%281000kbps%29.conf \
	output-profiles/Live%20Stream%20%283000kbps%29.conf \
	output-profiles/Live%20Stream%20%282000kbps%29.conf \
	output-profiles/YouTube.conf

########## Qt resource system ##########

EXTRA_DIST = \
	resources/resources.qrc \
	resources/about.htm \
	resources/header.png

endif
